deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oscar-deployment
spec:
  selector:
    matchLabels:
      app: oscar
  template:
    metadata:
      labels:
        app: oscar
    spec:
      containers:
      - name: oscar
